# examples

libraries/arma_trial/: install_arma.sh  install_depends.sh
libraries/arma_trial/mat_fft/: Makefile  mat_fft.cpp
libraries/arma_trial/mat_mult/: Makefile  mat_mult.cpp
libraries/arma_trial/mat_pinv/: Makefile  mat_pinv.cpp
libraries/eigen_trial/: install_eigen.sh
libraries/eigen_trial/mat_fft/: Makefile  mat_fft.cpp
libraries/eigen_trial/mat_mult/: Makefile  mat_mult.cpp
libraries/eigen_trial/mat_pinv/: Makefile  mat_pinv.cpp
performance/: mat_mul_vs_cache.cpp  sum_array_vs_cache.cpp
utilities/bazel_trial/: README.md
utilities/bazel_trial/multirepo/: .bazelrc  .gitignore  MODULE.bazel  README.md  WORKSPACE  googletest
utilities/bazel_trial/multirepo/app/: BUILD  greet.cpp  greet.h  main.cpp
utilities/bazel_trial/multirepo/bzl/: repos.MODULE.bazel  repos.bzl
utilities/bazel_trial/multirepo/lib/: BUILD  time.cpp  time.h
utilities/bazel_trial/multirepo/test/: BUILD  demo_test.cpp  free_test.cpp
utilities/bazel_trial/rules_hdl/: BUILD  README.md  WORKSPACE  counter.v
utilities/bazel_trial/rules_verilog/: README  WORKSPACE
