bazel_dep(name = "platforms",
          version = "0.0.10")

http_archive = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

git_repository = use_repo_rule("@bazel_tools//tools/build_defs/repo:git.bzl", "git_repository")

local_repository = use_repo_rule("@bazel_tools//tools/build_defs/repo:local.bzl", "local_repository")

http_archive(
    name = "http_gtest",
    url = "https://github.com/google/googletest/archive/v1.15.2.zip",
    sha256 = "f179ec217f9b3b3f3c6e8b02d3e7eda997b49e4ce26d6b235c9053bec9c0bf9f",
    strip_prefix = "googletest-1.15.2",
)

git_repository(
    name = "git_gtest",
    remote = "https://github.com/google/googletest.git",
    tag = "v1.15.2",
#    branch = "main",
)

local_repository(
    name = "local_gtest",
    path = "googletest",
)

